kubernetes/04-ollama-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
spec:
  serviceName: "ollama"
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      volumes:
      - name: ollama-data
        persistentVolumeClaim:
          claimName: ollama-data-pvc
      containers:
      - name: ollama
        image: richardjoseph1/ollama:48998043082b103dc46e7509f0dc1c3256bbb1d3
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: "500m"
            memory: "2Gi"
          limits:
            cpu: "1000m"
            memory: "4Gi"
        volumeMounts:
        - name: ollama-data
          mountPath: /ollama/.ollama
        livenessProbe:
          tcpSocket:
            port: 11434
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/tags
            port: 11434
          initialDelaySeconds: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /api/tags
            port: 11434
          failureThreshold: 30
          periodSeconds: 10
