kubernetes/03-ollama-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  ClusterIP: None
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
